--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <div>
                     <i class="fa-solid fa-bell"></i>
                     <i class="fa-solid fa-message"></i>
-                    <img class="profile-pic" src="~/goa.jpg" />
+                    <img class="profile-pic" src="~/70171.jpg" />
                 </div>
             </div>
         </nav>
