--- a/Views/Shared/_SideBar.cshtml
+++ b/Views/Shared/_SideBar.cshtml
@@ -28,22 +28,7 @@
         url = "/Transaction"
     });
 
-    menuItems.Add(new
-    {
-        text = "Extras",
-        separator = true,
-    });
-    menuItems.Add(new
-    {
-        text = "Reports",
-        iconCss = "fa-solid fa-chart-simple",
-        url = "#"
-    }); menuItems.Add(new
-    {
-        text = "Settings",
-        iconCss = "fa-solid fa-gear",
-        url = "#"
-    });
+ 
 }
 
 
@@ -58,10 +43,10 @@
         </div>
 
         <div class="profile-wrapper">
-            <img class="profile-pic" src="~/goa.jpg" />
+            <img class="profile-pic" src="~/70171.jpg" />
             <div class="titles d-flex flex-column ps-3">
                 <h6 class="mb-0">Wallet App</h6>
-                <span class="text-muted">Mann Shah</span>
+                <span class="text-muted">Nirav Patel</span>
             </div>
         </div>
 
