--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,6 +23,7 @@ body {
     background-color: #12161d;
     color: #fff;
     overflow: hidden;
+    font-family: Roboto, sans-serif;
 }
 
 .e-bigger {
@@ -348,4 +349,27 @@ img.profile-pic {
 
     .widget.chart {
         padding: 5px;
+    }
+
+    .login-logout-card .card-header{
+        padding: 0px 0px 12px 0px;
+    }
+
+    .login-logout-card ul.nav-tabs {
+    width: 50%;
+    }
+
+    .login-logout-card li.nav-item{
+        width: 50%;
+    }
+
+    .login-logout-card li.nav-item {
+        font-size: 1rem;
+        color: #495057;
+        text-align: center;
+        padding: 1rem;
+    }
+
+    .login-logout-card .card-body {
+    padding: 10px 20px;
     }
